			      CHANGES IN markdown VERSION 0.5

NEW FEATURES

  o added fragment.only parameter to markdownToHTML

  o added new html rendering options base64_images, fragment_only,
    mathjax, and highlight_code

  o added new markdown extension ignore_math

MAJOR CHANGES

  o removed safelink from default html rendering options

  o the default html rendering options are now hard_wrap, use_xhtml,
    smartypants, and base64_images.

BUG FIXES

  o fixed syntax errors in C exports

			      CHANGES IN markdown VERSION 0.4

NEW FEATURES

  o added support for post-processing HTML using smartypants filter

  o added optional support for rendering a table of contents

MAJOR CHANGES

  o changed exported C functions to use an rmd_ prefix (eliminating
    potential symbol conflicts with other packages)

  o changed default html rendering options to use_xhtml, hard_wrap,
    safelink, and smartypants

BUG FIXES

  o eliminated name collision with render_markdown function in knitr

