@@ -1,3 +1,16 @@
+#
+# guid.R
+#
+# Copyright (C) 2009-1012 by RStudio, Inc.
+#
+# This program is licensed to you under the terms of version 3 of the
+# GNU General Public License. This program is distributed WITHOUT ANY
+# EXPRESS OR IMPLIED WARRANTY, INCLUDING THOSE OF NON-INFRINGEMENT,
+# MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE. Please refer to the
+# GPL (http://www.gnu.org/licenses/gpl-3.0.txt) for more details.
+#
+#
+
 .GUIDgenerator <- function()
 {
    GUID <- -.Machine$integer.max
@@ -9,7 +22,7 @@
       if (is.na(GUID))
       {
          GUID <<- -.Machine$integer.max
-         GUIDprefix <<- .GUIDprefix + 1L
+         GUIDprefix <<- GUIDprefix + 1L
       }
       c(guid,GUIDprefix)
    }
